--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -195,7 +195,7 @@ function ChatRoom({ roomId, onReceiveMessage }) {
 
 Effect 이벤트는 reactive하지 않으므로 종속성으로 지정할 필요가 없습니다. 따라서 상위 컴포넌트가 모든 재렌더에서 다른 함수를 전달하더라도 채팅은 더 이상 다시 연결되지 않습니다.
 
-### reactive한 코드와 그렇지 않은 코드 분리하기
+### Reactive한 코드와 그렇지 않은 코드 분리하기
 
 이 예제에서는 `roomId`가 변경될 때마다 방문을 기록하려고 합니다. 로그 이벤트를 트리거하기 위해 `notificationCount`를 변경하지 않고 모든 로그에 현재 `notificationCount`를 포함하려고 합니다.
 
