--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -514,7 +514,7 @@ function ChatRoom({ getOptions }) {
 ## 정답
 
 Effect 내부에서 `count` 상태를 `count + 1`로 업데이트하려고 합니다. 
-그러나 이로 인해 Effect는 매초마다 변경되는 `count`에 따라 달라지므로 매초마다 안터벌이 다시 만들어집니다.
+그러나 이로 인해 Effect는 매초마다 변경되는 `count`에 따라 달라지므로 매초마다 간격이 다시 만들어집니다.
 
 이 문제를 해결하려면 [업데이트하는 함수](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state)를 사용하고 `setCount(count + 1)`
  대신 `setCount(c = > c + 1)`를 사용합니다:
