--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -530,7 +530,7 @@ React는 다음 렌더에 적용합니다.
 
 이 예에서 "표시"를 누르면 시작 메시지가 사라집니다. 
 애니메이션은 몇 초 정도 걸립니다. 
-제거를 누르면 시작 메시지가 즉시 사라집니다. 
+"제거"를 누르면 환영 메시지가 즉시 사라집니다. 
 페이드인 애니메이션에 대한 로직은 애니메이션.js 파일에서 플레인 JavaScript [애니메이션 루프](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame)로 구현됩니다. 
 당신은 그 논리를 바꿀 필요가 없고 제3의 라이브러리로 취급할 수 있습니다. 
 Effect는 DOM 노드에 대한 `FadeInAnimation` 인스턴스를 만든 다음 시작(기간) 또는 중지()를 호출하여 애니메이션을 제어합니다. 
