--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -406,7 +406,710 @@ function ShippingForm({ country }) {
 이는 Effect가 각각 다른 것을 동기화하고 있음을 의미하고 잘 분리했다는 것을 의미합니다.
 중복에 대해서 고민하고 있다면 [custom Hook으로 반복적인 로직을 추출](https://react.dev/learn/reusing-logic-with-custom-hooks#when-to-use-custom-hooks)함으로서 코드를 향상시킬 수 있습니다.
 
+## 다음 상태를 계산하기 위해 어떤 상태를 읽고 있나요?
+
+이 효과는 새 메시지가 도착할 때마다 새로 만든 배열로 `messages` 싱테 변수를 업데이트합니다.
+
+```js
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      setMessages([...messages, receivedMessage]);
+    });
+    // ...
+```
+
+`messages` 변수를 사용하여 기존의 모든 메시지로 시작하는 [새 배열을 만들고](https://react.dev/learn/updating-arrays-in-state) 마지막에 새 메시지를 추가합니다.
+그러나 `messages`는 Effect에서 읽은 reactive한 값이므로 종속성이어야 합니다.
+
+```js
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      setMessages([...messages, receivedMessage]);
+    });
+    return () => connection.disconnect();
+  }, [roomId, messages]); // ✅ 모든 의존성이 선언되었습니다.
+  // ...
+```
+
+그리고 `messages`를 의존성으로 만드는 것은 문제를 야기합니다.
+
+메시지를 수신할 때마다 `setMessages()`는 수신된 메시지가 포함된 새 `messages` 배열로 구성 요소를 다시 렌더링합니다. 그러나 이제 이 Effect는 `messages`에 따라 달라지므로 
+이 effect도 다시 동기화됩니다. 그래서 모든 새로운 메시지는 채팅을 다시 연결하게 만들 것입니다. 유저는 좋아하지 않을 것입니다!
+
+문제를 해결하려면 Effect 내의 `messages`를 읽지 마십시오. 대신 [업데이트 기능을 가진 함수를](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state) 
+`setMessages`에 전달합니다.
+
+```js
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      setMessages(msgs => [...msgs, receivedMessage]);
+    });
+    return () => connection.disconnect();
+  }, [roomId]); // ✅ 모든 의존성이 선언되었습니다
+  // ...
+```
+
+**이제 Effect가 `messages` 변수를 전혀 읽지 않는 것을 확인하세요.** `msgs => [...msgs, receivedMessage]`와 같은 업데이트 기능의 함수만 전달하면 됩니다. 
+React는 [업데이트 기능 함수을 큐에 넣고](https://react.dev/learn/queueing-a-series-of-state-updates) 다음 렌더링 시 `msgs` 인수를 제공합니다. 
+이것이 Effect 자체가 더 이상 `messages`에 의존할 필요가 없는 이유입니다. 이 문제를 해결하면 채팅 메시지를 수신해도 더 이상 채팅이 다시 연결되지 않습니다.
+
+## 변경 사항에 "반응"하지 않고 값을 읽고 싶나요?
+
+:::info 생성중
+
+이 섹션은 React의 안정적인 버전으로 배포되지 않은 실험적인 API를 설명합니다.
+
+:::
+
+`isMuted`가 `true`인 경우를 제외하고 사용자가 새 메시지를 받을 때 소리를 재생하려고 한다고 가정합니다:
+
+```js
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  const [isMuted, setIsMuted] = useState(false);
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      setMessages(msgs => [...msgs, receivedMessage]);
+      if (!isMuted) {
+        playSound();
+      }
+    });
+    // ...
+```
+
+이제 Effect는 코드에서 `isMuted`를 사용하므로 종속성에 변수를 추가해야 합니다:
+
+```js
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  const [isMuted, setIsMuted] = useState(false);
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      setMessages(msgs => [...msgs, receivedMessage]);
+      if (!isMuted) {
+        playSound();
+      }
+    });
+    return () => connection.disconnect();
+  }, [roomId, isMuted]); // ✅ 모든 의존성이 선언되었습니다.
+  // ...
+
+```
+
+문제는 사용자가 ("음소거" 토글을 누를 때와 같이) 매번 `isMuted`가 변경될 때마다 Effect가 다시 동기화되고 채팅에 다시 연결된다는 것입니다. 이것은 바람직한 사용자 환경이 아닙니다! 
+(이 예에서는 린터를 비활성화해도 작동하지 않습니다. 그렇게 하면 `isMuted`는 이전 값으로 "고정"됩니다.)
+
+이 문제를 해결하려면 Effect에서 reactive해서는 안 되는 논리를 추출해야 합니다. 이 Effect가 `isMuted`의 변경사항에 "반응"하지 않기를 원합니다. 
+[이 reactive하지 않은 논리 부분을 Effect 이벤트로 이동시키세요](https://react.dev/learn/separating-events-from-effects#declaring-an-effect-event):
+
+```js
+import { useState, useEffect, useEffectEvent } from 'react';
+
+function ChatRoom({ roomId }) {
+  const [messages, setMessages] = useState([]);
+  const [isMuted, setIsMuted] = useState(false);
+
+  const onMessage = useEffectEvent(receivedMessage => {
+    setMessages(msgs => [...msgs, receivedMessage]);
+    if (!isMuted) {
+      playSound();
+    }
+  });
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      onMessage(receivedMessage);
+    });
+    return () => connection.disconnect();
+  }, [roomId]); // ✅ 모든 의존성이 선언되었습니다.
+```
+
+Effect Events를 사용하면 Effect를 reactive한 부분(`roomId` 및 변경 사항과 같은 reactive한 값에 "반응"해야 함)과 reactive하지 않은 부분
+(`onMessage`가 `isMuted`를 읽는 것처럼 최신 값만 읽음)으로 나눌 수 있습니다. **이제 Effect 이벤트 내에서 `isMuted`를 읽기 때문에 Effect의 종속성일 필요는 없습니다.** 
+결과적으로 "음소거됨" 설정을 켜고 끌 때 채팅이 다시 연결되지 않고 원래 문제가 해결됩니다!
+
+### prop으로 받아온 이벤트 핸들러를 래핑하기
+
+컴포넌트가 이벤트 핸들러를 prop으로 받을 때 비슷한 문제가 발생할 수 있습니다:
+
+```js
+function ChatRoom({ roomId, onReceiveMessage }) {
+  const [messages, setMessages] = useState([]);
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      onReceiveMessage(receivedMessage);
+    });
+    return () => connection.disconnect();
+  }, [roomId, onReceiveMessage]); // ✅ All dependencies declared
+  // ...
+```
+
+상위 컴포넌트가 모든 렌더에서 _다른_ `onReceiveMessage` 함수를 전달한다고 가정합니다:
+
+```js
+<ChatRoom
+  roomId={roomId}
+  onReceiveMessage={receivedMessage => {
+    // ...
+  }}
+/>
+```
+
+`onReceiveMessage`는 종속성이므로 부모가 다시 렌더링할 때마다 Effect가 다시 동기화됩니다. 그러면 채팅에 다시 연결됩니다. 이 문제를 해결하려면 Effect 이벤트에 호출을 감쌉니다:
+
+```js 
+function ChatRoom({ roomId, onReceiveMessage }) {
+  const [messages, setMessages] = useState([]);
+
+  const onMessage = useEffectEvent(receivedMessage => {
+    onReceiveMessage(receivedMessage);
+  });
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.connect();
+    connection.on('message', (receivedMessage) => {
+      onMessage(receivedMessage);
+    });
+    return () => connection.disconnect();
+  }, [roomId]); // ✅ 모든 종속성 선언됨
+  // ...
+```
+
+Effect 이벤트는 reactive하지 않으므로 의존성으로 지정할 필요가 없습니다. 따라서 상위 컴포넌트가 모든 렌더링마다 다른 함수를 전달하더라도 채팅은 더 이상 다시 연결되지 않습니다.
+
+### Reactive한 코드와 그렇지 않은 코드 분리하기
+
+이 예제에서는 `roomId`가 변경될 때마다 방문을 기록하려고 합니다. 로그 이벤트를 트리거하기 위해 `notificationCount`를 변경하지 않고 모든 로그에 현재 `notificationCount`를 포함하려고 합니다.
+
+해결책은 다시 reactive하지 않은 코드를 Effect 이벤트로 분할하는 것입니다.
+
+```js 
+function Chat({ roomId, notificationCount }) {
+  const onVisit = useEffectEvent(visitedRoomId => {
+    logVisit(visitedRoomId, notificationCount);
+  });
+
+  useEffect(() => {
+    onVisit(roomId);
+  }, [roomId]); // ✅ 모든 의존성 선언됨
+  // ...
+}
+```
+
+`roomId`와 관련하여 논리가 reactive하기를 원하기 때문에 Effect의 `roomId`를 읽습니다.
+ 그러나 추가 방문을 기록하기 위해 `notificationCount`를 변경하지 않으려는 경우 Effect 이벤트 내부의 `notificationCount`를 읽게 됩니다. 
+ [Effect 이벤트를 사용한 Effect에서 최신 prop과 상태를 읽는 방법에 대해 자세히 알아봅니다.](https://react.dev/learn/separating-events-from-effects#reading-latest-props-and-state-with-effect-events)
+
+### 일부 reactive한 값이 의도치 않게 변경되나요?
 
 
+때로는 Effect가 특정 값에 "반응"하기를 원하지만, 해당 값은 원하는 것보다 더 자주 변경되며 사용자의 관점에서 실제 변경 내용을 반영하지 못할 수도 있습니다. 
+예를 들어 컴포넌트의 내부에서 `options` 객체를 만든 다음 Effect의 내부에서 해당 객체를 읽었다고 가정합니다.
 
+```js 
+function ChatRoom({ roomId }) {
+  // ...
+  const options = {
+    serverUrl: serverUrl,
+    roomId: roomId
+  };
+
+  useEffect(() => {
+    const connection = createConnection(options);
+    connection.connect();
+    // ...
+```
+
+이 객체는 컴포넌트 본문에 선언되므로 [reactive한 값](https://react.dev/learn/lifecycle-of-reactive-effects#effects-react-to-reactive-values)입니다. 
+Effect 내에서 이와 같은 reactive한 값을 읽으면 종속성으로 선언됩니다. 이렇게 하면 Effect가 변경사항에 "반응"할 수 있습니다:
+
+```js
+// ...
+  useEffect(() => {
+    const connection = createConnection(options);
+    connection.connect();
+    return () => connection.disconnect();
+  }, [options]); // ✅ 모든 종속성은 선언되었습니다
+  // ...
+```
+
+반응형 값을 종속성으로 선언하는 것이 중요합니다! 이렇게 하면 예를 들어, `roomId`가 변경되면 Effect가 새 `options`로 대화에 다시 연결됩니다. 하지만 위의 코드에도 문제가 있습니다. 
+이를 보려면 아래 샌드박스에서 입력창에 입력하고 콘솔에서 발생하는 상황을 확인해 보세요:
+
+<Code src="https://codesandbox.io/s/1kh8bo?file=%2FApp.js&utm_medium=sandpack"/>
+
+위의 샌드박스에서는 입력이 `message` 상태 변수만 업데이트합니다. 사용자의 관점에서 이것은 채팅 연결에 영향을 미치지 않습니다. 
+그러나 `message`를 업데이트할 때마다 컴포넌트가 다시 렌더링됩니다. 컴포넌트가 다시 렌더링되면 컴포넌트 내부의 코드가 처음부터 다시 실행됩니다.
+
+새 `options` 객체는 `ChatRoom` 컴포넌트의 모든 재렌더링에 처음부터 작성됩니다. React는 `options` 객체가 마지막 렌더링 시 생성된 `options` 객체와 _다른_ 객체임을 확인합니다. 
+이것이 (`options`에 의존하는) Effect가 다시 동기화되고 사용자가 입력할 때 채팅이 다시 연결되는 이유입니다.
+
+**이 문제는 객체와 함수에만 영향을 미칩니다. JavaScript에서 새로 생성된 각 객체 및 함수는 다른 모든 객체와 구별되는 것으로 간주됩니다. 그것들 안의 내용물이 같을 수도 있다는 것은 중요하지 않습니다!**
+
+```js 
+// 첫 렌더링 동안
+const options1 = { serverUrl: 'https://localhost:1234', roomId: 'music' };
+
+// 다음 렌더링 동안
+const options2 = { serverUrl: 'https://localhost:1234', roomId: 'music' };
+
+// 여기 두개의 다른 객체 입니다:
+console.log(Object.is(options1, options2)); // false 
+```
+
+**객체 및 함수 종속성으로 인해 Effect가 필요 이상으로 자주 다시 동기화될 수 있습니다.**
+
+따라서 가능할 때마다 Effect의 종속성으로 객체와 함수를 사용하지 않도록 해야 합니다. 대신 컴포넌트 외부, Effect 내부로 이동하거나 원시값을 추출해 보세요.
+
+### 정적 객체 및 함수를 컴포넌트 외부로 이동하기 
+
+객체가 어떠한 prop 및 상태에도 의존하지 않는 경우, 해당 객체를 컴포넌트 외부로 이동할 수 있습니다:
+
+```js 
+const options = {
+  serverUrl: 'https://localhost:1234',
+  roomId: 'music'
+};
+
+function ChatRoom() {
+  const [message, setMessage] = useState('');
+
+  useEffect(() => {
+    const connection = createConnection(options);
+    connection.connect();
+    return () => connection.disconnect();
+  }, []); // ✅ 모든 종속성이 선언됨 
+  // ...
+```
+
+이렇게 하면 린터에게 reactive 하지 않다는 것을 _증명_할 수 있습니다. 재렌더의 결과로 변경될 수 없으므로 종속성일 필요는 없습니다.
+`Chatroom`을 다시 렌더링해도 Effect가 다시 동기화되지 않습니다.
+
+이는 함수에도 적용됩니다:
+
+```js 
+function createOptions() {
+  return {
+    serverUrl: 'https://localhost:1234',
+    roomId: 'music'
+  };
+}
+
+function ChatRoom() {
+  const [message, setMessage] = useState('');
+
+  useEffect(() => {
+    const options = createOptions();
+    const connection = createConnection();
+    connection.connect();
+    return () => connection.disconnect();
+  }, []); // ✅ 모든 종속성 선언됨 
+  // ...
+```
+
+`createOptions`는 컴포넌트 외부에서 선언되므로 reactive한 값이 아닙니다. 따라서 Effect의 종속성에 이 값을 지정할 필요가 없으며 Effect가 다시 동기화되지 않는 이유입니다.
+
+### Effect 내부에서 동적 객체 및 함수 이동하기
+
+`roomId` prop과 같이 재렌더의 결과로 변경될 수 있는 reactive 값에 따라 객체가 달라지는 경우에는 컴포넌트 _밖으로_ 끌어낼 수 없습니다. 
+그러나 Effect의 코드 _내에서_ 만들어지도록 이동할 수 있습니다:
+
+```js 
+const serverUrl = 'https://localhost:1234';
+
+function ChatRoom({ roomId }) {
+  const [message, setMessage] = useState('');
+
+  useEffect(() => {
+    const options = {
+      serverUrl: serverUrl,
+      roomId: roomId
+    };
+    const connection = createConnection(options);
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId]); // ✅ 모든 의존성이 선언되었습니다
+  // ...
+```
+
+이제 `options`가 Effect 내부에 선언되었으므로 더 이상 Effect의 종속성이 아닙니다. 대신 Effect에서 사용되는 유일한 reactive 값은 `roomId`뿐입니다. 
+`roomId`는 객체나 함수가 아니므로 _의도하지 않은_ 동작이 일어나지 않을 것입니다. 자바스크립트에서 숫자와 문자열은 내용에 따라 비교됩니다:
+
+```js 
+// 첫 렌더링 동안
+const roomId1 = 'music';
+
+// 다음 렌더링 동안 
+const roomId2 = 'music';
+
+// 이 두 string 은 같습니다: 
+console.log(Object.is(roomId1, roomId2)); // true
+```
+
+이 수정 덕분에 입력을 편집하면 채팅이 더 이상 다시 연결되지 않습니다:
+
+<Code src="https://codesandbox.io/s/9k56ji?file=%2FApp.js&utm_medium=sandpack"/>
+
+그러나 `roomId` 드롭다운을 변경하면 예상대로 다시 연결됩니다.
+
+이는 다음 함수에도 적용됩니다:
+
+```js 
+const serverUrl = 'https://localhost:1234';
+
+function ChatRoom({ roomId }) {
+  const [message, setMessage] = useState('');
+
+  useEffect(() => {
+    function createOptions() {
+      return {
+        serverUrl: serverUrl,
+        roomId: roomId
+      };
+    }
+
+    const options = createOptions();
+    const connection = createConnection(options);
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId]); // ✅ 모든 의존성 선언됨
+  // ...
+```
+
+Effect 내부의 일부 논리들을 모아서 사용자 고유의 함수를 작성할 수 있습니다. Effect _내에서_ 이러한 값을 선언하는 한 reactive한 값이 아니므로 Effect의 종속성일 필요는 없습니다.
+
+### 객체에서 원시 값 읽기
+
+때때로 다음과 같이 prop에서 객체를 받을 수 있습니다:
+
+```js 
+function ChatRoom({ options }) {
+  const [message, setMessage] = useState('');
+
+  useEffect(() => {
+    const connection = createConnection(options);
+    connection.connect();
+    return () => connection.disconnect();
+  }, [options]); // ✅ 모든 종속성 선언됨
+  // ...
+```
+
+여기서 발생하는 위험은 렌더링 중에 부모 컴포넌트가 객체를 생성한다는 것입니다:
+
+```js 
+<ChatRoom
+  roomId={roomId}
+  options={{
+    serverUrl: serverUrl,
+    roomId: roomId
+  }}
+/>
+```
+
+이렇게 하면 부모 컴포넌트가 다시 렌더링될 때마다 Effect가 다시 연결됩니다. 이 문제를 해결하려면 Effect _외부의_ 객체에서 정보를 읽고 객체 및 함수 종속성을 피하십시오:
+
+```js 
+function ChatRoom({ options }) {
+  const [message, setMessage] = useState('');
+
+  const { roomId, serverUrl } = options;
+  useEffect(() => {
+    const connection = createConnection({
+      roomId: roomId,
+      serverUrl: serverUrl
+    });
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId, serverUrl]); // ✅ 모든 의존성 선언됨
+  // ...
+```
+
+논리가 약간 반복됩니다(Effect 외부의 개체에서 일부 값을 읽은 다음 Effect 내부에 동일한 값을 가진 객체를 만듭니다). 그러나 Effect가 _실제로_ 어떤 정보에 의존하는지는 매우 명확합니다.
+부모 컴포넌트에 의해 의도치 않게 객체가 다시 생성되는 경우 채팅이 다시 연결되지 않습니다. 그러나 `options.roomId` 또는 `options.serverUrl`이 실제로 다른 경우 채팅이 다시 연결됩니다.
+
+### 함수에서 원시 값 계산하기 
+
+함수에도 동일한 접근 방식이 적용될 수 있습니다. 예를 들어, 부모 컴포넌트가 함수를 전달한다고 가정합니다:
+
+```js 
+<ChatRoom
+  roomId={roomId}
+  getOptions={() => {
+    return {
+      serverUrl: serverUrl,
+      roomId: roomId
+    };
+  }}
+/>
+
+```
+
+종속성으로 만들지 않기 위해 (재렌더에서 다시 연결하지 않도록) Effect 외부에서 호출합니다. 그러면 객체가 아닌 `roomId` 및 `serverUrl` 값이 제공되며 Effect 내부에서 읽을 수 있습니다:
+
+```js 
+function ChatRoom({ getOptions }) {
+  const [message, setMessage] = useState('');
+
+  const { roomId, serverUrl } = getOptions();
+  useEffect(() => {
+    const connection = createConnection({
+      roomId: roomId,
+      serverUrl: serverUrl
+    });
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId, serverUrl]); // ✅ 모든 종속성 선언됨 
+  // ...
+```
+
+이 방법은 렌더링 중에 호출해도 안전하기 때문에 [순수](https://react.dev/learn/keeping-components-pure) 함수에만 사용할 수 있습니다. 
+함수가 이벤트 핸들러이지만 변경 내용이 Effect를 다시 동기화하 않으려면 [대신 Effect 이벤트로 감쌉니다](https://react.dev/learn/removing-effect-dependencies#do-you-want-to-read-a-value-without-reacting-to-its-changes).
+
+## 되돌아보기
+
+- 종속성은 항상 코드와 일치해야 합니다.
+- 종속성이 만족스럽지 않을 때는 코드를 편집해야 합니다.
+- 린터를 억제하면 매우 혼란스러운 버그가 발생하므로 항상 피해야 합니다.
+- 종속성을 제거하려면 린터에 그 종속성이 필요하지 않다는 것을 "증명"해야 합니다.
+- 특정 상호 작용에 대한 응답으로 일부 코드를 실행해야 하는 경우 해당 코드를 이벤트 핸들러로 이동합니다.
+- 다른 이유로 Effect의 다른 부분을 다시 실행해야 하는 경우 여러 Effect로 나눕니다.
+- 이전 상태를 기준으로 일부 상태를 업데이트하려면 업데이트 함수를 전달합니다.
+- 최신 값을 "반응"하지 않고 읽으려면 Effect에서 Effect 이벤트를 추출합니다.
+- JavaScript에서 객체와 함수가 다른 시간에 만들어졌으면 다른 것으로 간주됩니다.
+- 객체 및 함수 종속성을 피하려고 합니다. 컴포넌트 외부 또는 Effect 내부로 이동합니다.
+
+:::note 문제에 도전해보세요 
+
+## 도전1. 인터벌 제설정을 수정하기
+
+이 효과는 초당 눈금이 표시되는 간격을 설정합니다. 여러분은 이상한 일이 일어나는 것을 알아차렸습니다. 
+간격이 똑딱거릴 때마다 파괴되고 다시 생성되는 것 같습니다. 
+간격이 지속적으로 다시 생성되지 않도록 코드를 수정합니다.
+
+<Code src="https://codesandbox.io/s/x99ygb?file=/App.js&utm_medium=sandpack"/>
+
+## 힌트
+
+이 Effect의 코드는 `count`에 따라 달라지는 것 같습니다. 이 의존성을 필요로 하지 않는 방법이 있나요? 
+해당 값에 대한 종속성을 추가하지 않고 이전 값을 기준으로 `count` 상태를 업데이트할 수 있는 방법이 있어야 합니다.
+
+## 정답
+
+Effect 내부에서 `count` 상태를 `count + 1`로 업데이트하려고 합니다. 
+그러나 이로 인해 Effect는 매초마다 변경되는 `count`에 따라 달라지므로 매초마다 간격이 다시 만들어집니다.
+
+이 문제를 해결하려면 [업데이트하는 함수](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state)를 사용하고 `setCount(count + 1)`
+ 대신 `setCount(c = > c + 1)`를 사용합니다:
+
+ <Code src="https://codesandbox.io/s/bpkif3?file=%2FApp.js&utm_medium=sandpack"/>
+
+Effect 내부의 `count`를 읽는 대신 `c => c + 1` 명령("이 숫자를 계산합니다!")을 React에 전달합니다. 
+React는 다음 렌더에 적용합니다. 
+또한 더 이상 Effect 내부의 `count` 값을 읽을 필요가 없으므로 Effect의 종속성을 비워둘 수 있습니다([https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame]). 
+이렇게 하면 Effect가 모든 눈금에 대한 인터벌을 다시 만들지 않습니다.
+
+## 도전2. 애니메이션이 다시 재생되는 것을 고치기
+
+이 예에서 "표시"를 누르면 환영 메시지가 사라집니다. 
+애니메이션은 몇 초 정도 걸립니다. 
+"제거"를 누르면 환영 메시지가 즉시 사라집니다. 
+페이드인 애니메이션에 대한 로직은 애니메이션.js 파일에서 플레인 JavaScript [애니메이션 루프](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame)로 구현됩니다. 
+당신은 그 논리를 바꿀 필요가 없고 제3의 라이브러리로 취급할 수 있습니다. 
+Effect는 DOM 노드에 대한 `FadeInAnimation` 인스턴스를 만든 다음 `시작(기간)` 또는 `중지()`를 호출하여 애니메이션을 제어합니다.
+`지속 시간`은 슬라이더로 제어합니다. 슬라이더를 조정하고 애니메이션이 어떻게 변하는지 확인합니다.
+
+이 코드는 이미 작동하지만 변경할 사항이 있습니다. 
+현재 `duration` 상태 변수를 제어하는 슬라이더를 이동하면 애니메이션이 다시 트리거됩니다. 
+Effect가 `duration` 변수에 "반응"하지 않도록 동작을 변경합니다. 
+"표시"를 누르면 Effect가 슬라이더의 현재 `duration`을 사용합니다. 
+그러나 슬라이더를 움직인다고 해서 애니메이션이 다시 시작되는 것은 아닙니다.
+
+<Code src="https://codesandbox.io/s/8zzee4?file=%2FApp.js&utm_medium=sandpack"/>
+
+### 힌트
+
+Effect 안에 반응성이 없어야 하는 코드 라인이 있습니까? 반응성이 없어야하는 코드를 Effect 밖으로 이동하려면 어떻게 해야 하나요?
+
+Effect는 지속 시간의 최신 값을 읽어야 하지만 `duration`의 변화에 "반응"하지는 않습니다. 
+`duration`을 사용하여 애니메이션을 시작하지만 애니메이션을 시작해도 반응하지 않습니다. 
+비반응성 코드 부분을 Effect 이벤트로 추출하고 Effect에서 해당 함수를 호출합니다.
+
+<Code src="https://codesandbox.io/s/dyrkzy?file=%2FApp.js&utm_medium=sandpack"/>
+
+`onApear`와 같은 Effect Events는 반응성이 없으므로 애니메이션을 다시 트리거하지 않고 내부의 `지속 시간`을 읽을 수 있습니다.
+
+### 정답 
+
+Effect 는 `duration`의 최신 값을 읽어야 하지만 `duration`의 변화에 "반응"하지는 않습니다. 
+`duration`을 사용하여 애니메이션을 시작하지만 애니메이션을 시작해도 반응하지 않습니다. 
+non-reactive한 코드 줄을 Effect 이벤트로 추출하고 Effect에서 해당 함수를 호출합니다.
+
+<Code src="https://codesandbox.io/s/dyrkzy?file=%2FApp.js&utm_medium=sandpack"/>
+
+`onAppear`와 같은 Effect Events는 리액티브 하지 않으므로 애니메이션을 다시 호출하지 않고 내부의 `duration`을 읽을 수 있습니다.
+
+### 도전3. 채팅 재연결 고치기
+
+이 예에서는 "테마 변경"을 누를 때마다 채팅이 다시 연결됩니다. 
+왜 이런 일이 일어나나요? 
+서버 URL을 편집하거나 다른 대화방을 선택할 때만 대화가 다시 연결되도록 오류를 수정합니다.
+
+`chat.js`을 제3의 라이브러리로 취급: API를 확인하기 위해 참조할 수 있지만 편집하지 않습니다.
+
+<Code src="https://codesandbox.io/s/g084dx?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+### 힌트 
+
+이 문제를 해결하는 방법은 여러 가지가 있지만 궁극적으로는 객체를 종속성으로 지정하는 것을 피해야 합니다.
+
+### 정답
+Effect는 `options` 객체에 따라 달라지기 때문에 다시 실행되고 있습니다. 객체는 의도하지 않게 다시 생성될 수 있으므로 가능한 한 Effect의 종속성으로 간주되지 않도록 해야 합니다.
+가장 소극적인 해결책은 Effect 바로 밖에서 `roomId`와 `serverUrl`을 읽은 다음 의도하지 않게 변경할 수 없는 기본 값에 따라 Effect를 결정하는 것입니다. 
+Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니다:
+
+<Code src="https://codesandbox.io/s/kc7ede?file=/ChatRoom.js&utm_medium=sandpack"/>
+
+객체 `options` prop을 보다 구체적인 `roomId`와 `serverUrl` prop으로 바꾸는 것이 훨씬 더 좋습니다:
+
+<Code src="https://codesandbox.io/s/z6nidp?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+가능한 경우 원시적인 prop을 고수하면 나중에 컴포넌트를 더 쉽게 최적화할 수 있습니다.
+
+### 도전4. 채팅 재연결 다시 수정하기
+
+이 예제는 암호화 여부와 상관없이 대화에 연결됩니다. 이 확인란을 선택 취소하고 암호화를 설정하거나 해제할 때 콘솔의 다양한 메시지를 확인합니다. 
+방을 바꿔 보세요. 그런 다음 테마를 전환해 보세요. 대화방에 연결되면 몇 초마다 새 메시지를 받게 됩니다. 선택한 테마와 색상이 일치하는지 확인합니다.
+
+이 예에서는 테마를 변경할 때마다 채팅이 다시 연결됩니다. 이걸 고쳐보세요. 수정 후 테마를 변경하면 대화가 다시 연결되지 않지만 암호화 설정을 전환하거나 대화방을 변경하면 다시 연결됩니다.
+
+`chat.js`에서 코드를 변경하지 마세요. 그 외에는 코드가 동일한 동작을 수행하는 한 모든 코드를 변경할 수 있습니다. 
+예를 들어, 전해지는 prop을 변경하는 것이 도움이 될 수 있습니다.
+
+<Code src="https://codesandbox.io/s/ktlzkl?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+### 힌트
+
+여러분은 지금 두 가지 함수, 즉 `onMessage` 및 `createConnection`를 전달하고 있습니다. 둘 다 `App`의 모든 렌더링 마다 처음부터 생성됩니다. 
+이 함수들은 매번 새로운 값으로 간주되므로 Effect를 다시 호출합니다.
+
+이러한 함수 중 하나는 이벤트 핸들러입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않게끔 하면서도 Effect 내부에서 이벤트 핸들러를 호출하게 하는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
+
+이러한 함수 중 다른 함수는 가져온 API 메서드에 일부 상태를 전달하기 위해서만 존재합니다. 
+이 기능이 정말 필요합니까? 전해져야하는 필수 정보는 무엇인가요? 일부 import를 `App.js`에서 `ChatRoom.js`로 이동시켜야 할 수 있습니다.
+
+### 정답
+
+이 문제를 해결하는 올바른 방법은 여러 가지가 있지만 여기 가능한 해결책이 하나 있습니다.
+
+원래 예제에서 테마를 전환하면 다른 `onMessage` 및 `createConnection` 함수가 생성되어 전달되도록 합니다. 
+Effect는 이러한 함수에 따라 달라지므로 테마를 전환할 때마다 채팅이 다시 연결됩니다.
+
+`onMessage`로 문제를 해결하려면 이 문제를 Effect Event로 감쌀 필요가 있습니다:
+
+```js 
+export default function ChatRoom({ roomId, createConnection, onMessage }) {
+  const onReceiveMessage = useEffectEvent(onMessage);
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.on('message', (msg) => onReceiveMessage(msg));
+    // ...
+```
+
+`onMessage` prop과 달리 `onReceiveMessage` Effect 이벤트는 반응하지 않습니다. 
+따라서 `onReceiveMessage`는 Effect의 종속성일 필요가 없습니다. `onMessage`로 변경해도 채팅이 다시 연결되지 않습니다.
+
+`createConnection`은 리액티브 해야 _하므로_ 동일한 작업을 수행할 수 없습니다. 
+사용자가 암호화된 연결과 암호화되지 않은 연결을 전환하거나 현재 채팅방을 전환할 경우 Effect가 다시 동작하길 _원할 수_ 있습니다. 
+그러나 `createConnection`은 함수이므로 이 함수가 읽은 정보가 _실제로_ 변경되었는지 여부를 확인할 수 없습니다. 
+이 문제를 해결하려면 `App` 컴포넌트에서 `createConnection`을 전달하는 대신 날것의 `roomId` 및 `isEncrypted` 값을 전달합니다:
+
+```js 
+   <ChatRoom
+        roomId={roomId}
+        isEncrypted={isEncrypted}
+        onMessage={msg => {
+          showNotification('New message: ' + msg, isDark ? 'dark' : 'light');
+        }}
+      />
+```
+
+이제 `App`에서 `createConnection` 함수를 전달하는 대신 Effect 내부로 함수를 이동할 수 있습니다:
+
+```js 
+import {
+  createEncryptedConnection,
+  createUnencryptedConnection,
+} from './chat.js';
+
+export default function ChatRoom({ roomId, isEncrypted, onMessage }) {
+  const onReceiveMessage = useEffectEvent(onMessage);
+
+  useEffect(() => {
+    function createConnection() {
+      const options = {
+        serverUrl: 'https://localhost:1234',
+        roomId: roomId
+      };
+      if (isEncrypted) {
+        return createEncryptedConnection(options);
+      } else {
+        return createUnencryptedConnection(options);
+      }
+    }
+    // ...
+```
+
+이 두 가지 변경 후에는 더 이상 다음 함수 값에 따라 Effect가 달라지지 않습니다:
+
+```js 
+export default function ChatRoom({ roomId, isEncrypted, onMessage }) { // Reactive values
+  const onReceiveMessage = useEffectEvent(onMessage); // Not reactive
+
+  useEffect(() => {
+    function createConnection() {
+      const options = {
+        serverUrl: 'https://localhost:1234',
+        roomId: roomId // Reading a reactive value
+      };
+      if (isEncrypted) { // Reading a reactive value
+        return createEncryptedConnection(options);
+      } else {
+        return createUnencryptedConnection(options);
+      }
+    }
+
+    const connection = createConnection();
+    connection.on('message', (msg) => onReceiveMessage(msg));
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId, isEncrypted]); // ✅ 모든 종속성이 선언됨
+```
+따라서 대화는 의미 있는 항목(`roomId` 또는 `isEncrypted`)가 변경될 때만 다시 연결됩니다:
+
+<Code src="https://codesandbox.io/s/oorctr?file=%2FChatRoom.js&utm_medium=sandpack"/>
 
